# reddress

./: pyproject.toml
src/reddress/: __init__.py  cli.py  core.py
src/reddress/templates/: app.py  main.py
src/reddress/templates/routes/: dashboard.py  pages.py
src/reddress/templates/static/css/: styles.css
src/reddress/templates/templates/: index.html
src/reddress/utils/: __init__.py  chunking.py  document_loader.py  embeddings.py  helpers.py  prompt_manager.py  rag_database.py  rag_engine.py  stats.py  vector_manager.py
